force-app/main/default/objects/PermissionSetAssignment__c/PermissionSetAssignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Criteria for automatically assigning a permission set group to a user.</description>
    <label>Permission Set Assignment</label>
</CustomObject>