force-app/main/default/objects/PermissionSetAssignment__c/fields/JobNames__c.field-meta.xml
<CustomField>
    <fullName>JobNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separate list of job name valid for this setup.</inlineHelpText>
    <label>Job Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>