force-app/main/default/objects/PermissionSetAssignment__c/fields/PermissionGroupName__c.field-meta.xml
<CustomField>
    <fullName>PermissionGroupName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the permission set group</inlineHelpText>
    <label>Permission Group Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>