force-app/main/default/objects/PermissionSetAssignment__c/fields/ProfileNames__c.field-meta.xml
<CustomField>
    <fullName>ProfileNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of profile names available for this permission set group</inlineHelpText>
    <label>Profile Names</label>
    <length>110</length>
    <type>Text</type>
</CustomField>