force-app/main/default/objects/PermissionSetAssignment__c/fields/SalesDivisions__c.field-meta.xml
<CustomField>
    <fullName>SalesDivisions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of Sales Divisions valid for this assignment</inlineHelpText>
    <label>Sales Divisions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>