force-app/main/default/objects/PermissionSetAssignment__c/fields/SalesOrgs__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of Sales Orgs valid for this assignment</inlineHelpText>
    <label>Sales Orgs</label>
    <length>30</length>
    <type>Text</type>
</CustomField>